docker-registry/kustomize/ui/kustomize/deployment.yaml
# deployment for docker repo
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-ui
  namespace: docker
  labels:
    app: docker-registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry-ui
  template:
    metadata:
      labels:
        app: docker-registry-ui
    spec:
      containers:
        - name: docker-registry-ui
          image: parabuzzle/craneoperator:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
