docker-registry/kustomize/ui/kustomize/service.yaml
# service for docker repo
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
  namespace: docker
  labels:
    app: docker-registry-ui
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: docker-registry-ui
  sessionAffinity: None
  type: ClusterIP
