docker-registry/kustomize/ui/kustomize/ingress.yaml
# ingress for docker repo
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-ui
  namespace: docker
spec:
  rules:
  - host: docker.juxtagene.com
    http:
      paths:
      - backend:
          serviceName: docker-registry-ui
          servicePort: 80
        path: /ui
  tls:
  - hosts:
    - docker.juxtagene.com
    secretName: docker-juxtagene-com-tls
